--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,7 +7,8 @@
 # 3.11 é a mais segura para Pandas 2.x
 python = "3.11" 
 
-
+[server]
+pythonVersion = "3.11"
 # ============================================================
 # THEME - Aparência Visual
 # ============================================================
