--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,13 @@ pydantic-settings==2.1.0
 
 # Utilities
 python-dotenv==1.0.0
+requests==2.31.0
 
 # Dashboard 
 streamlit==1.39.0
 pandas==2.1.3
 plotly==5.18.0
 gunicorn
+
+# IA
+openai==1.30.0
